	rdiff:
	 . Fixed ignore_version default value missing
	 . Add patch from Matthew Palmer to rdiff handler to incorporate sshoptions
	   into options via remote-schema not already specified (Closes: #424639)
	wget:
	 . New handler from rhatto designed to incrementally pull content from
	   a website to a local folder, based on the rsync handler
	maildir:
	 . fixed bug where maildirs that start with a number were skipped.
	 . make deleted maildirs record the date they were deleted
	 . add destid_file configuration option to enable you to specify an alternate
	   ssh public key authentication file (defaulting to /root/.ssh/id_rsa)
	pgsql, mysql, svn, sys:
	 . use new vservers_running function from lib/vserver (factorization++)
	sys:
	 . update for 2.6 kernels: use /proc/kallsyms instead of /proc/ksyms
	   (Closes: Trac#39)
	 . support selection of VServers to run on, in the same way as in the
	   dup handler, with the new vsnames configuration option ; (Closes: Trac#45)
	 . add support for capturing the package debconf selection states using
	   debconf-get-selections
	 . fixed catifexec function to actually work, also now passes the arguments
	   given to catifexec() to the called command (Thanks John Hallam!)
	 . Added more robust software RAID information capture by running mdadm
	   -Q --detail /dev/md?* because some people may have empty mdadm.conf files
	   (Thanks to John Hallam).
	trac:
	 . stop failing on all the trac backups if just one fails, this means
	   removing the temporary trac backup directories if they fail

version 0.9.5 -- December 2, 2007
    backupninja changes
	 . Fixed checks on configuration files permissions, since the patch
	   applied to fix #370396 broke this, especially for configuration files
	   created with permissions 000 by an older ninjahelper version.
	 . Enhanced portability for other platforms
	 . Added quoting because it was needed to prevent shell expansion, broking the
           toint function sometimes (Closes: Trac#11)